--- a/public/style.css
+++ b/public/style.css
@@ -2028,27 +2028,11 @@ button:hover {
   background-color: #0056b3; /* Warna latar belakang saat digulir */
 }
 
-/* .container {
-  max-width: 400px;
-  margin: 0 auto;
-} */
+/* Baru */
 
 .input-wrapper {
   margin-bottom: 1rem;
 }
-
-/* .btn {
-  display: block;
-  width: 100%;
-  padding: 0.75rem;
-  font-size: 1rem;
-  text-align: center;
-  cursor: pointer;
-  border: none;
-  border-radius: 0.25rem;
-  background-color: #007bff;
-  color: #fff;
-} */
 
 .btn:hover {
   background-color: #0056b3;
