--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -37,7 +37,11 @@
               </li>
 
               <li class="nav-item active">
-                <a class="nav-link" href="/add_promo"><i class="fas fa-plus"></i>Promos</a>
+                <a class="nav-link" href="/add_promo"><i class="fas fa-plus"></i> Promos</a>
+              </li>
+              
+              <li class="nav-item active">
+                <a class="nav-link" href="/add_ticket"><i class="fas fa-plus"></i> Ticket</a>
               </li>
               <!-- Tambahkan elemen navigasi lainnya di sini -->
             </ul>
