--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-lg-6 mx-auto mt-4">
             <div class="card shadow">
-                <div class="card-header bg-primary">
+                <div class="card-header bg-warning">
                     <h3 class="text-light">Add New User</h3>
                 </div>
                 <div class="card-body p-4">
@@ -26,7 +26,7 @@
                             <input class="form-control form-control-lg" type="file" name="image" required />
                         </div>
                         <div class="mb-3 d-grid">
-                            <input type="submit" name="submit" value="Add User" class="btn btn-primary btn-lg" />
+                            <input type="submit" name="submit" value="Add User" class="btn btn-warning btn-lg" />
                         </div>
                     </form>
                 </div>
