--- a/views/add_promo.ejs
+++ b/views/add_promo.ejs
@@ -10,7 +10,7 @@
                 </div>
             <% } %>
             <div class="card shadow">
-                <div class="card-header bg-primary">
+                <div class="card-header bg-warning">
                     <h3 class="text-light">Add New Promo</h3>
                 </div>
                 <div class="card-body p-4">
@@ -28,7 +28,7 @@
                             <input class="form-control" type="file" name="image" required />
                         </div>
                         <div class="mb-3 d-grid">
-                            <input type="submit" name="submit" value="Add Promo" class="btn btn-primary btn-lg" />
+                            <input type="submit" name="submit" value="Add Promo" class="btn btn-warning btn-lg" />
                         </div>
                     </form>
                 </div>
