--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>Admin</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.min.css" 
     integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,6 +11,16 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.datatables.net/v/bs4/dt-2.0.5/datatables.min.css" rel="stylesheet">
+  <style>
+    /* CSS untuk menyesuaikan warna warning */
+    .bg-warning {
+      background-color: #f49600 !important;  /* Ganti dengan warna yang lebih gelap jika diinginkan */
+    }
+    .btn-warning {
+      background-color: #f49600 !important;
+    }
+  </style>
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -22,22 +32,23 @@
           <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="/admin"><i class="fas fa-home me-1"></i>Home</a>
+                <a class="nav-link text-light" href="/admin"><i class="fas fa-home me-1"></i>Home</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/add"><i class="fas fa-user-plus me-1"></i>Add User</a>
+                <a class="nav-link text-light" href="/add"><i class="fas fa-user-plus me-1"></i>Add User</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/add_rides"><i class="fas fa-plus"></i></i> Rides</a>
+                <a class="nav-link text-light" href="/add_rides"><i class="fas fa-plus"></i></i> Rides</a>
               </li>
 
               <li class="nav-item active">
-                <a class="nav-link" href="/add_carousel"><i class="fas fa-plus"></i></i> Carousel</a>
+                <a class="nav-link text-light" href="/add_carousel"><i class="fas fa-plus"></i></i> Carousel</a>
               </li>
 
               <li class="nav-item active">
-                <a class="nav-link" href="/add_promo"><i class="fas fa-plus"></i>Promos</a>
+                <a class="nav-link text-light" href="/add_promo"><i class="fas fa-plus"></i>Promos</a>
               </li>
+
               <!-- Tambahkan elemen navigasi lainnya di sini -->
             </ul>
           </div>
