Betul betul betul rides location

--- a/views/edit_carousel.ejs
+++ b/views/edit_carousel.ejs
@@ -20,7 +20,7 @@
                         <div class="mb-3">
                             <label for="image" class="form-label">Select New Image</label>
                             <input class="form-control" type="file" name="image" />
-                            <img src="<%= carousel.image %>" width="100" class="img-thumbnail mt-1"> <!-- Menampilkan gambar yang sudah ada -->
+                            <img src="/<%= carousel.image %>" width="100" class="img-thumbnail mt-1"> <!-- Menampilkan gambar yang sudah ada -->
                         </div>
                         <input type="hidden" name="old_image" value="<%= carousel.image %>" />
                         <div class="mb-3 d-grid">
