--- a/views/add_rides.ejs
+++ b/views/add_rides.ejs
@@ -17,15 +17,24 @@
                     <form action="/add_rides" method="post" id="add-ride-form" enctype="multipart/form-data">
                         <div class="mb-3">
                             <label for="title">Title</label>
-                            <input type="text" name="title" class="form-control" placeholder="Enter title" required /> <!-- Menghapus kelas form-control-lg -->
+                            <input type="text" name="title" class="form-control" placeholder="Enter title" required />
                         </div>
                         <div class="mb-3">
                             <label for="description">Description</label>
-                            <textarea name="description" class="form-control" placeholder="Enter description" required></textarea> <!-- Menghapus kelas form-control-lg -->
+                            <textarea name="description" class="form-control" placeholder="Enter description" required></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="location">Location</label>
+                            <select name="location" class="form-control" required>
+                                <option value="Atlantis Ancol">Atlantis Ancol</option>
+                                <option value="Samudra Ancol">Samudra Ancol</option>
+                                <option value="Sea World Ancol">Sea World Ancol</option>
+                                <option value="Ecopark Ancol">Ecopark Ancol</option>
+                            </select>
                         </div>
                         <div class="mb-3">
                             <label for="image" class="form-label">Select Image</label>
-                            <input class="form-control" type="file" name="image" required /> <!-- Menghapus kelas form-control-lg -->
+                            <input class="form-control" type="file" name="image" required />
                         </div>
                         <div class="mb-3 d-grid">
                             <input type="submit" name="submit" value="Add Ride" class="btn btn-primary btn-lg" />
@@ -40,11 +49,12 @@
                     <div class="card-body">
                         <div class="row align-items-center">
                             <div class="col-md-4">
-                                <img src="<%= ride.image %>" alt="<%= ride.title %>" class="img-fluid" loading="lazy"> <!-- Menambahkan kelas img-fluid untuk memastikan gambar yang ditampilkan responsif -->
+                                <img src="<%= ride.image %>" alt="<%= ride.title %>" class="img-fluid" loading="lazy">
                             </div>
                             <div class="col-md-8">
                                 <h5 class="card-title"><%= ride.title %></h5>
                                 <p class="card-text"><%= ride.description %></p>
+                                <p class="card-text"><strong>Location:</strong> <%= ride.location %></p>
                                 <div class="btn-group">
                                     <a href="/edit_ride/<%= ride._id %>" class="btn btn-primary">Edit</a>
                                     <form action="/delete_ride/<%= ride._id %>" method="POST">
