Aigoo gwencanaa yo

--- a/views/layout/header-login.ejs
+++ b/views/layout/header-login.ejs
@@ -12,6 +12,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.datatables.net/v/bs4/dt-2.0.5/datatables.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./login.css">
+    <link rel="shortcut icon" href="./images/A_logo.png">
 </head>
 <body>
     
