--- a/views/add_ticket.ejs
+++ b/views/add_ticket.ejs
@@ -10,7 +10,7 @@
                 </div>
             <% } %>
             <div class="card shadow">
-                <div class="card-header bg-primary">
+                <div class="card-header bg-warning">
                     <h3 class="text-light">Add New Ticket</h3>
                 </div>
                 <div class="card-body p-4">
@@ -45,7 +45,7 @@
                             <input type="number" name="reviews" class="form-control" placeholder="Enter reviews" required />
                         </div>
                         <div class="mb-3 d-grid">
-                            <input type="submit" name="submit" value="Add Ticket" class="btn btn-primary btn-lg" />
+                            <input type="submit" name="submit" value="Add Ticket" class="btn btn-warning btn-lg" />
                         </div>
                     </form>
                 </div>
