--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -47,7 +47,11 @@
               </li>
 
               <li class="nav-item active">
-                <a class="nav-link text-light" href="/add_promo"><i class="fas fa-plus"></i>Promos</a>
+                <a class="nav-link text-light" href="/add_promo"><i class="fas fa-plus"></i >Promos</a>
+              </li>
+
+              <li class="nav-item active">
+                <a class="nav-link text-light" href="/add_ticket"><i class="fas fa-plus"></i> Ticket</a>
               </li>
 
               <!-- Tambahkan elemen navigasi lainnya di sini -->
